--- a/src/components/template/Logo.css
+++ b/src/components/template/Logo.css
@@ -1,1 +1,13 @@
+aside.logo {
+    /*background-color: var(--bg-dark);*/
+    display: flex;
+    width: 150px;
+    height: 120px;
+    justify-content: center;
+    align-items: center;
+}
 
+aside.logo img {
+    padding: 0px 15px;
+    width: 100%;
+}
