--- a/src/main/App.css
+++ b/src/main/App.css
@@ -1,8 +1,8 @@
 :root {
     --bg-dark: #1A2F3A;
 
-    --logo-height: 100px;
-    --header-height: 50px;
+    --logo-height: 100vh;
+    --header-height: 100px;
     --aside-width: 150px;
     --footer-height: 40px;
 
