--- a/src/main/App.css
+++ b/src/main/App.css
@@ -1,9 +1,9 @@
 :root {
     --bg-dark: #1A2F3A;
 
-    --logo-height: 100vh;
-    --header-height: 100px;
-    --aside-width: 150px;
+    --logo-height: 150px;
+    --header-height: 150px;
+    --aside-width: 225px;
     --footer-height: 40px;
 
 
@@ -21,7 +21,7 @@
         display: grid;
         grid-template-columns: var(--aside-width) 1fr;
         grid-template-rows:
-            var (--header-height) 
+            var(--header-height)
             1fr 
             var(--footer-height);
         grid-template-areas:
