--- a/src/components/template/Nav.css
+++ b/src/components/template/Nav.css
@@ -2,7 +2,6 @@ aside.menu-area {
     background-color: var(--bg-dark);
     box-shadow: 2px 0 10px 0 rgba(0, 0, 0, 0.12),
         2px 0 15px 0 rgba(0, 0, 0, 0.09);
-
 }
 
 .menu a {
@@ -14,7 +13,8 @@ aside.menu-area {
 }
 
 .menu a:hover {
-    background: linear-gradient(135deg, #07a7e3 0%, #32dac3 100%);
+    background: linear-gradient(135deg, #e3d407 0%, #e3d407 100%);
+    color: black;
 }
 
 @media(max-width: 768px) {
