tela de login, construcao e autenticacao

--- a/src/components/template/nav/Nav.css
+++ b/src/components/template/nav/Nav.css
@@ -13,7 +13,7 @@ aside.menu-area {
 }
 
 .menu a:hover {
-    background: linear-gradient(135deg, #e3d407 0%, #e3d407 100%);
+    background: linear-gradient(135deg, #fff9a2 0%, #fff9a2 100%);
     color: black;
 }
 
