--- a/src/components/pages/login/Login.css
+++ b/src/components/pages/login/Login.css
@@ -5,7 +5,17 @@
 
 .content-main>div {
     width: 50%;
-    height: 50%;
+    height: 60%;
+}
+
+.content-main p {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+}
+
+input {
+    width: 50px;
 }
 
 main {
