--- a/src/components/template/footer/Footer.css
+++ b/src/components/template/footer/Footer.css
@@ -1,7 +1,7 @@
 footer.footer {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     padding: 0 25px;
     background: #FFF;
     box-shadow: var(--shadow);
