--- a/src/components/pages/vacancy/Vacancies.css
+++ b/src/components/pages/vacancy/Vacancies.css
@@ -1,6 +1,11 @@
 .content-main>div {
     background-color: #FFF;
     box-shadow: 0px 0px 15px #0004;
+
+}
+
+#btn-check {
+    margin: 3px;
 }
 
 
